--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "deploy": "npx gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
@@ -24,6 +25,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "daisyui": "^2.49.0"
+    "daisyui": "^2.49.0",
+    "gh-pages": "^5.0.0"
   }
 }
